@@ -116,6 +116,9 @@ NOTE: sorry, this is very raw :)
 
 + in guitar editor, put 2 notes on two strings. move them down until both are on lowest string. undo and try to get back those you had in the beginning
 
+- class ScalePicker in /Dialogs... should be renamed ScaleDialog, or moved
+- tuningpicker and tuningdialog should be 2 separate things
+
 - when wait dialog appears, you can still edit tracks and do operations that may be harmful to current process.
     yet you can't make it modal otherwise the background process stops.
 
